# llm-playground

./: LLMs performance analsys.md  OLLAMA_OPTIMIZATION_GUIDE.md  README.md  benchmark_llm_speed.py  llama-cpp-bencher.py  plot_cpu_gpu_comparison.py  plot_ollama_rankings.py  pyproject.toml  rank_ollama_models.py  requirements.txt  run_analysis.sh  setup_llm_distrobox.sh
